--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
         "davidhsianturi/blade-bootstrap-icons": "^1.3",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
+        "jenssegers/mongodb": "^3.9",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^4.0"
+        "laravel/ui": "^4.0",
+        "mongodb/mongodb": "^1.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
